# PyNerd-Academy-Backend

./: CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/accounts/: admin.py  models.py  permissions.py  pipeline.py  serializers.py  tests.py  urls.py  views.py
apps/courses/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
core/: settings.py  urls.py
docs/: API_GUIDE.md  CHANGELOG.md  configuracao_social_email.md
